--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Henrique Menegale</title>
 </head>
 <body>
-    Olá
+    Olá, mundo
+    <div>
+        Bla bla bla
+    </div>
 </body>
 </html>
